--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -22,15 +22,14 @@ jobs:
         python -m pip install --upgrade pip
         pip install pipenv
         pipenv install --dev
-        pipenv shell
     - name: Lint with flake8
       run: |
-        pip install flake8
+        pipenv install flake8
         # stop the build if there are Python syntax errors or undefined names
-        flake8 fin_app --count --select=E9,F63,F7,F82 --show-source --statistics
+        pipenv run flake8 fin_app --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 fin_app --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        pipenv run flake8 fin_app --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
         pipenv install pytest
-        pytest fin_app
+        pipenv run pytest tests
