--- a/.github/workflows/github_page_deploy.yml
+++ b/.github/workflows/github_page_deploy.yml
@@ -30,4 +30,4 @@ jobs:
       env:
         ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
         PUBLISH_BRANCH: gh-pages
-        PUBLISH_DIR: ./docs/fin_app
+        PUBLISH_DIR: ./docs/html/fin_app
