--- a/Pipfile
+++ b/Pipfile
@@ -8,8 +8,12 @@ pdoc = "*"
 mypy = "*"
 flake8 = "*"
 pytest = "*"
+isort = "*"
 
 [packages]
+sqlalchemy = "*"
+tweepy = "*"
+boto3 = "*"
 
 [requires]
 python_version = "3.7"
