--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Python package
+name: Test
 
 on: [push]
 
@@ -22,6 +22,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install pipenv
         pipenv install --dev
+        pipenv install -e .
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
