--- a/.github/workflows/github_page_deploy.yml
+++ b/.github/workflows/github_page_deploy.yml
@@ -1,4 +1,4 @@
-name: Python package
+name: GitHub Page Deploy
 
 on: [push]
 
@@ -24,10 +24,10 @@ jobs:
         pipenv install --dev
     - name: build doc
       run: |
-        make
+        pipenv run pdoc --html fin_app --html-dir docs/html --overwrite
     - name: deploy
       uses: peaceiris/actions-gh-pages@v2.4.0
       env:
         ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
         PUBLISH_BRANCH: gh-pages
-        PUBLISH_DIR: ./docs/fin_app
+        PUBLISH_DIR: ./docs/html/fin_app
