--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,8 +21,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pipenv
-        pipenv install --dev
-        pipenv install -e .
+        pipenv install --skip-lock --dev -e .
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
