--- a/docker/lambda/crawl/Dockerfile
+++ b/docker/lambda/crawl/Dockerfile
@@ -1,10 +1,16 @@
 FROM public.ecr.aws/lambda/python:3.7
 
+RUN yum install -y git
 RUN python -m pip install --upgrade pip
 RUN pip install pipenv
-RUN git clone --depth 1 https://github.com/pondelion/FinAppBackend.git
+RUN git clone https://github.com/pondelion/FinAppBackend.git
 RUN cd FinAppBackend && \
     git checkout develop && \
-    pipenv install --skip-lock --dev -e .
+    # pipenv install --skip-lock --dev -e .
+    pipenv lock --keep-outdated --requirements > requirements.txt && \
+    pip install -r requirements.txt && \
+    pip install -e .
+COPY ./lambda/example_handler.py .
+COPY ./lambda/example_handler.py ./FinAppBackend/
 COPY ./fin_app/config/*  ./FinAppBackend/fin_app/config/
 CMD ["app.handler"]
