--- a/lambda/crawl/serverless.yml
+++ b/lambda/crawl/serverless.yml
@@ -36,7 +36,7 @@ provider:
 functions:
   stockpriceCrawlDaily:
     image:
-      name: crwalimage
+      name: "${env:ECR_ACCOUNT}.dkr.ecr.ap-northeast-1.amazonaws.com/finapp-lambda-crawl@${env:IMAGE_SHA_HASH}"
       command:
         - FinAppBackend.lambda.crawl.functions.stockprice_crawl.crawl
       entryPoint:
