--- a/docker/lambda/crawl/Dockerfile
+++ b/docker/lambda/crawl/Dockerfile
@@ -3,8 +3,8 @@ FROM public.ecr.aws/lambda/python:3.7
 RUN yum install -y git
 RUN python -m pip install --upgrade pip
 RUN pip install pipenv
-RUN git clone https://github.com/pondelion/FinAppBackend.git
-RUN cd FinAppBackend && \
+RUN git clone https://github.com/pondelion/FinAppBackend.git && \
+    cd FinAppBackend && \
     git checkout develop && \
     # pipenv install --skip-lock --dev -e .
     pipenv lock --keep-outdated --requirements > requirements.txt && \
