--- a/docker/lambda/crawl/Dockerfile
+++ b/docker/lambda/crawl/Dockerfile
@@ -6,10 +6,12 @@ RUN pip install pipenv
 RUN git clone https://github.com/pondelion/FinAppBackend.git && \
     cd FinAppBackend && \
     git checkout develop && \
-    # pipenv install --skip-lock --dev -e .
-    pipenv lock --keep-outdated --requirements > requirements.txt && \
+    # pipenv install --skip-lock --dev -e . && \
+    # pipenv run pip freeze > requirements.txt && \
+    # pipenv lock --keep-outdated --requirements > requirements.txt && \
     pip install -r requirements.txt && \
     pip install -e .
+    # pipenv --rm
 COPY ./lambda/example_handler.py .
 RUN cp FinAppBackend/lambda/crawl/functions/* .
 COPY ./fin_app/config/*  ./FinAppBackend/fin_app/config/
